commt